$Id$

****************************** DRUPAL 5 BRANCH ********************************

May 11, 2008
------------
#255949 Added link to top of forum threads that lists the number of unread comments and links to the first one. This links to the comment id and so will work across pages. 

May 10, 2008
------------
#253365 Patch to make advforum and Zen subthemes play nice. Also fixes my goof with theme_image(). Thanks, JohnAlbin.

May 7, 2008 -- Alpha 8
-----------
#253778 Fixed typo that prevented advforum directory from being found. Thanks VValdo.
#254892 Added variable for forum description to forum topic list. Theme changes: advf-forums.tpl.php - Added description. advf-forum-topic-list.tpl.php - Updated variable list to include $forum_description. advf-forum-topic-list.tpl.php - padding around new class.
#239724 Excluded CSS from block admin page due to weird issue. Thanks ajevans85.
#246778 Fixed extra = that caused anon posters to show joined, etc.
#249651 Added check that contact module is enabled.
#248652 Fixed PHP 4 incompatibility in showing last post in forum. Thanks jamix.
Fixed 'user' information not showing for visitors on comments.

April 17, 2008
--------------
#246701 Fix for IE 6 hiding post info. Thanks CompShack.
#241258 Changed the forum overview 'new topics' folder from red to green and kept red version as forum-all-new-red.png. Thanks Zandroc.

April 8, 2008
-------------
Added code to advf-forum-topic-list.tpl.php and advf-forum-list.tpl.php to give rows first/middle/last for class to aid in theming.
Minor CSS change to remove forced left align of topics/points count.
#239406 Removed default to theme_forum_submitted when the .tpl file is missing.
#244228 Added Czech translation. Thanks to kecinzer.
#241258 Change folder icon when there are new posts in a forum. Thanks Zandroc. (Affects advf-forum-list.tpl.php and advanced_forum.css. Adds forum-all-new.png)