@@ -202,7 +202,7 @@ padding-bottom: .2em;
 }
 
 .innertube{
-  margin: 10px 7px 10px 13px; 
+  margin: 10px 7px 10px 9px;
 }
 
 .forum-comment .links {
